<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anniversary Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_anniversary_adapter">AnniversaryAdapter</string>
    <string name="title_activity_add_anniversary">AddAnniversary</string>
    <string name="hello_world">Hello world!</string>

    <!-- header_view.xml -->
    <string name="add_new_todo_item_string">Add New Anniversary</string>
    <string name="add_anniversary_textView">Add New Anniversary</string>

    <!-- UILabs -->

    <string name="contact_info_string">N/A</string>

    <string name="date_string">"Date: "</string>
    <string name="title_string">Change/Add a anniversary to one your contacts</string>

    <string name="date_string_selected">Date Selected</string>

    <string name="no_date_set_string">_No_Date_Selected_</string>

    <string name="choose_date_string">Choose Date</string>

    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="btn_Select_Contact">Select the Contact</string>
    <string name="photo_descriptor">photo</string>

    <string name="label_activity_preferences">Settings</string>
    <string name="setting_choose">Settings</string>
    <string name="untilDaysLabel">Small Text</string>
    <string name="notify_on_boot_title">Notify me on Boot</string>


</resources>
