<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isel.grupo17.anniversaryreminder.MainActivity"
    >

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/photoImageView"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/photo_descriptor"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_user_default"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/photoImageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#ffcdccca">
    </TextView>

    <TextView
        android:id="@+id/DateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_string"
        android:layout_below="@+id/titleView"
        android:layout_toEndOf="@+id/photoImageView"
        android:textColor="#ff9d9f9d">
    </TextView>

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DateLabel"
        android:layout_toRightOf="@+id/DateLabel"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/untilDaysLabel"
        android:id="@+id/daysView"
        android:textStyle="bold|italic"
        android:textColor="#ffb6b6b4"
        android:textSize="12dp"
        android:layout_alignBottom="@+id/photoImageView"
        android:layout_alignEnd="@+id/titleView"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true" />


</RelativeLayout>
